--- a/atopile/essentials/4-packages.mdx
+++ b/atopile/essentials/4-packages.mdx
@@ -1,10 +1,10 @@
 ---
 title: '4. Packages'
-description: "One of the key benefits to designing circuit boards with code is that it unlocks modularity. As in software, this modularity means you can package up and reuse modules other's have developed and tested."
+description: "One of the key benefits of designing circuit boards with code is that it unlocks modularity. As in software, this modularity means you can package up and reuse modules others have developed and tested."
 icon: 'cubes'
 ---
 
-One of the key benefits to designing circuit boards with code is that it unlocks modularity. As in software, this modularity means you can package up and reuse modules other's have developed and tested.
+One of the key benefits of designing circuit boards with code is that it unlocks modularity. As in software, this modularity means you can package up and reuse modules others have developed and tested.
 
 ## Finding packages
 
@@ -17,7 +17,7 @@ Also, Google is your friend. Packages are often publicly available on github or 
 
 You can manage dependencies using three commands: `ato add`, `ato sync` and `ato remove`.
 
-Installed dependencies are kept in sync by all of these commands, and so you don't need to think too mush about managing environments too much.
+Installed dependencies are kept in sync by all of these commands, so you don't need to think too much about managing environments.
 
 If you pull a new project, just run `ato sync` to install the dependencies.
 
