--- a/atopile/guides/development.mdx
+++ b/atopile/guides/development.mdx
@@ -12,7 +12,7 @@ icon: 'wrench'
 
 VSCode is recommended for development. If nothing else, it has heaps of high quality extensions and atopile language support, plus it's used internally - making it easier to configure for purpose.
 
-You should have at minimal:
+You should have at a minimum:
 - [Cursor](https://www.cursor.com/) or [VSCode](https://code.visualstudio.com)
 - [Cursor / VSCode atopile extension](https://marketplace.visualstudio.com/items?itemName=atopile.atopile) (also works for Cursor)
 
@@ -35,5 +35,5 @@ This runs a [`debugpy`](https://github.com/microsoft/debugpy) server on port `56
 </Frame>
 
 <Tip title="Syntax highlighting isn't working">
-  If you're having trouble with syntax highlighting in the debugger, it might be because VSCode sets up a mapping between the remote and local file paths by default - remove it.
+  If you're having trouble with syntax highlighting in the debugger, it might be because VSCode sets up a mapping between the remote and local file paths by default—remove it.
 </Tip>
