--- a/atopile/guides/faebryk.mdx
+++ b/atopile/guides/faebryk.mdx
@@ -10,7 +10,7 @@ icon: 'heart'
 
 `faebryk` is a Python module that uses a powerful and efficient core graph (nodes + edges) to represent every relationship in your design or circuit.
 
-`fabll` is a Python framework to model circuits, much like `ato`. It unlocks a the whole Turing-complete power of Python to do design in + low-level procedural code and logic. Think of it like writing C for a Python module. It's focus is power - not ease of use like `ato`, so it's not recommended for most designs to start with.
+`fabll` is a Python framework to model circuits, much like `ato`. It unlocks the whole Turing-complete power of Python to do design in, plus low-level procedural code and logic. Think of it like writing C for a Python module. Its focus is power—not ease of use like `ato`—so it's not recommended for most designs to start with.
 
 <Warning>
     `fabll` is currently in a very early stage of development. It's not publicly supported yet.
@@ -20,7 +20,7 @@ icon: 'heart'
 
 To build a `fabll` module with atopile, you just need to point to the module within your `ato.yaml` configuration file.
 
-When you run `ato build`, atopile automatically builds the `fabll` module and link it to your project.
+When you run `ato build`, atopile automatically builds the `fabll` module and links it to your project.
 
 ## Importing `fabll` code
 
