--- a/atopile/guides/git.mdx
+++ b/atopile/guides/git.mdx
@@ -4,7 +4,7 @@ description: 'Using `git` for Hardware'
 icon: 'git-alt'
 ---
 
-`git` is a powerful way to version control your design and one of the key reasons atopile was started. If you don't know about `git`, learning it is strongly recommended. It's highly likely you end up loving it.
+`git` is a powerful way to version control your design and one of the key reasons atopile was started. If you don't know about `git`, learning it is strongly recommended. It's highly likely you'll end up loving it.
 
 ## Basic usage
 
@@ -18,13 +18,13 @@ git push -u origin HEAD
 
 ## Workflow overview
 
-`git` is the de-facto standard for version control in software development. For people who haven't used it before, it's worth explaining a few terms and the workflow
+`git` is the de facto standard for version control in software development. For people who haven't used it before, it's worth explaining a few terms and the workflow:
 
 | Term | Definition |
 | --- | --- |
-| "Repo" or Repository | A collection of files and directories that is version controlled together. |
+| "Repo" or Repository | A collection of files and directories that are version controlled together. |
 | Branch | A "branch" is an isolated space for your changes. |
-| Commit | A "commit" is a snapshot of some changes in that place in time. |
+| Commit | A "commit" is a snapshot of some changes at that place in time. |
 | Push | A "push" is sending your changes to the remote repo. |
 | Pull Request | A "pull request" is a request to merge your changes into the main branch. This is the time to review and test your changes with others on your team. |
 
