--- a/atopile/guides/install.mdx
+++ b/atopile/guides/install.mdx
@@ -9,7 +9,7 @@ import QuickstartInstall from '/snippets/atopile/guides/quick-install.mdx';
 <QuickstartInstall />
 
 
-Ultimately `atopile` is a python package, so you can install it where and but you want - but some python package managers are better than others. Here's the recommended method to install atopile.
+Ultimately, `atopile` is a Python package, so you can install it wherever and however you want—but some Python package managers are better than others. Here's the recommended method to install atopile.
 
 
 ## Homebrew `brew` <small>(recommended for macOS)</small>
@@ -30,7 +30,7 @@ brew install atopile/tap/atopile
     ```
 
     <Warning>
-        `uv` if this is the first time you've used `uv` for a tool install, it might give you another command to run to finish setup.
+        If this is the first time you've used `uv` for a tool install, it might give you another command to run to finish setup.
 
         Do it.
     </Warning>
