--- a/atopile/guides/publish.mdx
+++ b/atopile/guides/publish.mdx
@@ -217,7 +217,7 @@ If you want to dynamically generate the version leave this blank, and use the `p
 #### `package.authors`
 
 The authors are the people who should be credited for the package.
-This is a list of, each with a `name` and `email`.
+This is a list, with each entry having a `name` and `email`.
 
 #### `package.summary`
 
@@ -235,4 +235,4 @@ This can be a link to your GitHub repository, or perhaps your website where you 
 
 ### GitHub Action
 
-For the most up to date details on the GitHub Action, see the [GitHub Action README](https://github.com/atopile/publish-package).
+For the most up-to-date details on the GitHub Action, see the [GitHub Action README](https://github.com/atopile/publish-package).
