--- a/atopile/quickstart.mdx
+++ b/atopile/quickstart.mdx
@@ -26,7 +26,7 @@ We also strongly recommend installing the [atopile VSCode/Cursor extension](http
 ![atopile extension](./images/vscode-plugin.png)
 
 <Accordion title="(Experimental) MCP server">
-    Setup an MCP server for this documentation with
+    Set up an MCP server for this documentation with
 
     ``` sh
     npx mint-mcp add atopile
@@ -49,13 +49,13 @@ Otherwise, you can download it from here: https://www.kicad.org/download/
 
 1. Sketch your circuit on paper.
 2. Search https://packages.atopile.io and GitHub for pre-existing modules you need, and use `ato install` to install them.
-3. Design a module and do it's calculations using `ato` code.
-4. Run `ato build` to compile your project choose components to suit your design and update your layout (PCB) file.
-5. Use KiCAD to layout any changes
+3. Design a module and do its calculations using `ato` code.
+4. Run `ato build` to compile your project, choose components to suit your design, and update your layout (PCB) file.
+5. Use KiCAD to lay out any changes
 6. Repeat steps 3-5 until you're happy with your design.
 7. When you're done with your design, push your changes to your repo.
 8. CI will automatically build and test your project, and generate the manufacturing files you need to order your PCBs.
-9. Take these manufacturing files to your PCB manufacturer to get your PCBAs
+9. Take these manufacturing files to your PCB manufacturer to get your PCBAs.
 
 ``` mermaid
 graph TB
@@ -128,7 +128,7 @@ INFO     Build successful! 🚀
 ```
 
 Then KiCAD will open up (that's what the `--open` flag does).
-You shiny ✨ new  component should be waiting for you in the top left corner (possibly off the current screen).
+Your shiny ✨ new  component should be waiting for you in the top left corner (possibly off the current screen).
 
 ![layout](/atopile/images/quickstart-layout.png)
 
@@ -139,7 +139,7 @@ Oh yeah! We're in business. 😎
 
 This isn't even a circuit yet, merely a single component however you now:
 
-- Have the `ato` CLI and compiler setup and working
+- Have the `ato` CLI and compiler set up and working
 - Know how to add components to your design
 - Have KiCAD installed and working
 
