--- a/atopile/support.mdx
+++ b/atopile/support.mdx
@@ -8,9 +8,9 @@ icon: 'pray'
 
 The "help" channel in [Discord](https://discord.gg/JY62WubxsP) is the best way to get an immediate hand with anything the docs don't cover.
 
-## Commertial Support
+## Commercial Support
 
-For support of commertial projects using atopile, Discord remains a great resource, however please contact us at [hi@atopile.io](mailto:hi@atopile.io) for specific projects.
+For support of commercial projects using atopile, Discord remains a great resource, however please contact us at [hi@atopile.io](mailto:hi@atopile.io) for specific projects.
 
 ## Bugs and Feature Requests
 
