--- a/hil/atopilled.mdx
+++ b/hil/atopilled.mdx
@@ -78,7 +78,7 @@ When referred to alone, engineers are usually talking about functional verificat
 
 More broadly, this is the process of ensuring the design meets the requirements provided.
 
-For teams which repeatably build very similar products, there's often a lot of value in investing in automation here.
+For teams that repeatedly build very similar products, there's often a lot of value in investing in automation here.
 
 
 #### Continuous Integration
@@ -96,7 +96,7 @@ When said alone, this refers to automated, typically CI-based testing with at le
 
 The hardware might be as small as a single device or microcontroller where the rest of the system is emulated by a FPGA (low fidelity) or as large as a whole instrumented system (high fidelity).
 
-When you think of HiL testing, picture a server rack with each shelf hosting a board from your product or DUT (device under test), and a tester that manipulated and measures signals from the DUT.
+When you think of HiL testing, picture a server rack with each shelf hosting a board from your product or DUT (device under test), and a tester that manipulates and measures signals from the DUT.
 
 Typically, HiL testing:
 
