--- a/hil/introduction.mdx
+++ b/hil/introduction.mdx
@@ -13,10 +13,10 @@ Using this framework you ([or we](https://form.typeform.com/to/DLMYKqCu)) can bu
         Sense, sniff, control, communicate, measure and more. We've got you covered.
     </Card>
     <Card title="Drivers" icon="code" href="./build/drivers">
-        Drivers come out of the box. Make talking to your hardware easy.
+        Drivers come out-of-the-box. Make talking to your hardware easy.
     </Card>
     <Card title="Framework" icon="bolt" href="./build/framework">
-        Tools atop pytest take you from python script to test report in minutes.
+        Tools on top of pytest take you from Python script to test report in minutes.
     </Card>
     <Card title="Distribution (alpha)" icon="paper-plane" href="./build/distribution">
         Remotely run tests on any hardware from anywhere.
