--- a/hil/resources/os.mdx
+++ b/hil/resources/os.mdx
@@ -9,7 +9,7 @@ TODO: Add reference information on exactly what Raspberry Pi OS version is used 
 
 ### Installing `usbboot` on macOS
 
-We've had issues with the official instructions at https://github.com/raspberrypi/usbboot
+We've had issues with the official instructions at https://github.com/raspberrypi/usbboot.
 
 Alternative instructions worked for @napowderly: https://www.jeffgeerling.com/blog/2020/how-flash-raspberry-pi-os-compute-module-4-emmc-usbboot
 
