--- a/snippets/atopile/guides/quick-install.mdx
+++ b/snippets/atopile/guides/quick-install.mdx
@@ -6,7 +6,7 @@ We recommend using Cursor. AI is already getting very good at writing `ato` code
 
 Download it here: https://www.cursor.com/
 
-Once you have VScode/Cursor just install the [atopile VSCode/Cursor extension](vscode:extension/atopile.atopile).
+Once you have VSCode/Cursor just install the [atopile VSCode/Cursor extension](vscode:extension/atopile.atopile).
 
 ![atopile extension](/atopile/images/vscode-plugin.png)
 
