--- a/atopile/guides/publish.mdx
+++ b/atopile/guides/publish.mdx
@@ -22,7 +22,7 @@ The best way to do this is to publish it to the [public atopile registry](https:
 
 
 You can structure your project in two common ways. Keep an eye out for the notes on each, as they'll affect your workflow slightly
-1. A **single package** in the repo, like [HiL](https://github.com/atopile/hil).
+1. A **single package** in the repo, like [nonos](https://github.com/atopile/nonos).
 2. A **monorepo** with multiple separate packages, like [packages](https://github.com/atopile/packages). This is common when you're a larger org, and have a lot to share.
 {/* 3. A project with multiple **sub-packages**, like [HiL](https://github.com/atopile/hil). This is common when you design something, and then later realise some part of it is useful on its own. */}
 
