--- a/atopile/guides/faebryk.mdx
+++ b/atopile/guides/faebryk.mdx
@@ -1,31 +1,13 @@
 ---
 title: 'faebryk'
 description: faebryk is atopile's kernel. It's the way the world is modeled.
-icon: 'heart'
+icon: 'brain'
 ---
 
-# `faebryk` & `fabll` 🐍
+# Disambiguation: `faebryk` vs `fabll` 🐍
 
 `faebryk` is atopile's core. It's the way the world is modeled.
 
 `faebryk` is a Python module that uses a powerful and efficient core graph (nodes + edges) to represent every relationship in your design or circuit.
 
-`fabll` is a Python framework to model circuits, much like `ato`. It unlocks the whole Turing-complete power of Python to do design in, plus low-level procedural code and logic. Think of it like writing C for a Python module. Its focus is power—not ease of use like `ato`—so it's not recommended for most designs to start with.
-
-<Warning>
-    `fabll` is currently in a very early stage of development. It's not publicly supported yet.
-</Warning>
-
-## Building `fabll` code
-
-To build a `fabll` module with atopile, you just need to point to the module within your `ato.yaml` configuration file.
-
-When you run `ato build`, atopile automatically builds the `fabll` module and links it to your project.
-
-## Importing `fabll` code
-
-You can just import `fabll` modules in `ato` like any other import:
-
-```python
-from "path/to/some/fabll.py" import SomeModule
-```
+`fabll` is a Python framework to model circuits in, much like `ato` it acts as a language in the atopile ecosystem. It unlocks the whole power and ecosystem of Python to do design in. 
