--- a/atopile/api-reference/components/capacitor.mdx
+++ b/atopile/api-reference/components/capacitor.mdx
@@ -1,101 +1,105 @@
 ---
+
 title: "Capacitor"
-icon: "microchip"
+icon: microchip
 description: ""
 ---
 
 
 ## Parameters
 
-<ParamField path="capacitance" type="F">
+<ParamField path='capacitance' type='F'>
 </ParamField>
 
-<ParamField path="max_voltage" type="V">
+<ParamField path='max_voltage' type='V'>
 </ParamField>
 
-<ParamField path="temperature_coefficient" type="string">
+<ParamField path='temperature_coefficient' type='string'>
 </ParamField>
 
 
 ## Interfaces
 
-<ParamField path="unnamed" type="Electrical[2]">
+<ParamField path='unnamed' type='string'>
 </ParamField>
 
-<ParamField path="attach_to_footprint" type="can_attach_to_footprint_symmetrically">
+<ParamField path='attach_to_footprint' type='string'>
 </ParamField>
 
 
 ## Properties
 
-<ParamField path="p1" type="Electrical" readonly>
-  One side of the capacitor.
+<ParamField path='p1' type='string'>
 </ParamField>
 
-<ParamField path="p2" type="Electrical" readonly>
-  The other side of the capacitor.
+<ParamField path='p2' type='string'>
 </ParamField>
 
-<ParamField path="power" type="Electrical" readonly>
-  An `ElectricPower` interface, which is connected to the capacitor.
+<ParamField path='power' type='string'>
 </ParamField>
 
 
 ## Traits
 
-[pickable](/atopile/api-reference/traits/pickable)
+**pickable**
 
 [can_bridge](/atopile/api-reference/traits/can-bridge)
 
 Allows component or module to be used in bridging connections with the ~> operator for series connections.
 
-[simple_value_representation](/atopile/api-reference/traits/simple-value-representation)
+**simple_value_representation**
 
 
 ## Global Attributes
 
 These attributes are available to all modules and interfaces in a design.
 
-<ParamField path="lcsc_id" type="string">
-  Assign the LCSC ID of the module.
+<ParamField path='lcsc_id' type='string'>
+
+Assign the LCSC ID of the module.
 
 If set, this will tell the picker to select that part from LCSC for this block.
 </ParamField>
 
-<ParamField path="manufacturer" type="string">
-  This module's manufacturer name, as a string.
+<ParamField path='manufacturer' type='string'>
+
+This module's manufacturer name, as a string.
 
 Only exact matches on the manufacturer's name will be found by the picker.
 It's recommended to fill this information based on what `ato create component`
 provides.
 </ParamField>
 
-<ParamField path="mpn" type="string">
-  This module's manufacturer part number, as a string.
+<ParamField path='mpn' type='string'>
+
+This module's manufacturer part number, as a string.
 
 For the picker to select the correct part from the manufacturer,
 this must be set.
 </ParamField>
 
-<ParamField path="package" type="string">
-  The package of the module.
+<ParamField path='package' type='string'>
+
+The package of the module.
 
 This drives which components can be selected, and what footprint is used.
 
 Must exactly match a known package name.
 </ParamField>
 
-<ParamField path="exclude_from_bom" type="string">
+<ParamField path='exclude_from_bom' type='string'>
 </ParamField>
 
-<ParamField path="override_net_name" type="string">
-  When set on an interface, this will override the net name of the interface.
+<ParamField path='override_net_name' type='string'>
+
+When set on an interface, this will override the net name of the interface.
 
 This is useful for renaming nets which are automatically generated.
 </ParamField>
 
-<ParamField path="required" type="string">
-  Only for ModuleInterfaces.
+<ParamField path='required' type='string'>
+
+Only for ModuleInterfaces.
 If set to `True`, require that interface is connected to something outside
 of the module it's defined in.
 </ParamField>
