--- a/atopile/api-reference/components/crystal.mdx
+++ b/atopile/api-reference/components/crystal.mdx
@@ -1,43 +1,44 @@
 ---
+
 title: "Crystal"
-icon: "microchip"
+icon: microchip
 description: ""
 ---
 
 
 ## Parameters
 
-<ParamField path="frequency" type="Hz">
+<ParamField path='frequency' type='Hz'>
 </ParamField>
 
-<ParamField path="frequency_tolerance" type="ppm">
+<ParamField path='frequency_tolerance' type='ppm'>
 </ParamField>
 
-<ParamField path="frequency_temperature_tolerance" type="ppm">
+<ParamField path='frequency_temperature_tolerance' type='ppm'>
 </ParamField>
 
-<ParamField path="frequency_ageing" type="ppm">
+<ParamField path='frequency_ageing' type='ppm'>
 </ParamField>
 
-<ParamField path="equivalent_series_resistance" type="Ω">
+<ParamField path='equivalent_series_resistance' type='Ω'>
 </ParamField>
 
-<ParamField path="shunt_capacitance" type="F">
+<ParamField path='shunt_capacitance' type='F'>
 </ParamField>
 
-<ParamField path="load_capacitance" type="F">
+<ParamField path='load_capacitance' type='F'>
 </ParamField>
 
 
 ## Interfaces
 
-<ParamField path="gnd" type="Electrical">
+<ParamField path='gnd' type='string'>
 </ParamField>
 
-<ParamField path="unnamed" type="Electrical[2]">
+<ParamField path='unnamed' type='string'>
 </ParamField>
 
-<ParamField path="footprint" type="can_attach_to_footprint_symmetrically">
+<ParamField path='footprint' type='string'>
 </ParamField>
 
 
@@ -45,46 +46,52 @@ description: ""
 
 These attributes are available to all modules and interfaces in a design.
 
-<ParamField path="lcsc_id" type="string">
-  Assign the LCSC ID of the module.
+<ParamField path='lcsc_id' type='string'>
+
+Assign the LCSC ID of the module.
 
 If set, this will tell the picker to select that part from LCSC for this block.
 </ParamField>
 
-<ParamField path="manufacturer" type="string">
-  This module's manufacturer name, as a string.
+<ParamField path='manufacturer' type='string'>
+
+This module's manufacturer name, as a string.
 
 Only exact matches on the manufacturer's name will be found by the picker.
 It's recommended to fill this information based on what `ato create component`
 provides.
 </ParamField>
 
-<ParamField path="mpn" type="string">
-  This module's manufacturer part number, as a string.
+<ParamField path='mpn' type='string'>
+
+This module's manufacturer part number, as a string.
 
 For the picker to select the correct part from the manufacturer,
 this must be set.
 </ParamField>
 
-<ParamField path="package" type="string">
-  The package of the module.
+<ParamField path='package' type='string'>
+
+The package of the module.
 
 This drives which components can be selected, and what footprint is used.
 
 Must exactly match a known package name.
 </ParamField>
 
-<ParamField path="exclude_from_bom" type="string">
+<ParamField path='exclude_from_bom' type='string'>
 </ParamField>
 
-<ParamField path="override_net_name" type="string">
-  When set on an interface, this will override the net name of the interface.
+<ParamField path='override_net_name' type='string'>
+
+When set on an interface, this will override the net name of the interface.
 
 This is useful for renaming nets which are automatically generated.
 </ParamField>
 
-<ParamField path="required" type="string">
-  Only for ModuleInterfaces.
+<ParamField path='required' type='string'>
+
+Only for ModuleInterfaces.
 If set to `True`, require that interface is connected to something outside
 of the module it's defined in.
 </ParamField>
