--- a/atopile/api-reference/components/eeprom.mdx
+++ b/atopile/api-reference/components/eeprom.mdx
@@ -1,80 +1,87 @@
 ---
+
 title: "EEPROM"
-icon: "microchip"
+icon: microchip
 description: "Generic EEPROM module with F.I2C interface."
 ---
 
 
 ## Parameters
 
-<ParamField path="memory_size" type="bit">
+<ParamField path='memory_size' type='bit'>
 </ParamField>
 
 
 ## Interfaces
 
-<ParamField path="power" type="ElectricPower">
+<ParamField path='power' type='string'>
 </ParamField>
 
-<ParamField path="i2c" type="I2C">
+<ParamField path='i2c' type='string'>
 </ParamField>
 
-<ParamField path="write_protect" type="ElectricLogic">
+<ParamField path='write_protect' type='string'>
 </ParamField>
 
-<ParamField path="address" type="ElectricLogic[3]">
+<ParamField path='address' type='string'>
 </ParamField>
 
 
 ## Traits
 
-[single_electric_reference](/atopile/api-reference/traits/single-electric-reference)
+**single_electric_reference**
 
 
 ## Global Attributes
 
 These attributes are available to all modules and interfaces in a design.
 
-<ParamField path="lcsc_id" type="string">
-  Assign the LCSC ID of the module.
+<ParamField path='lcsc_id' type='string'>
+
+Assign the LCSC ID of the module.
 
 If set, this will tell the picker to select that part from LCSC for this block.
 </ParamField>
 
-<ParamField path="manufacturer" type="string">
-  This module's manufacturer name, as a string.
+<ParamField path='manufacturer' type='string'>
+
+This module's manufacturer name, as a string.
 
 Only exact matches on the manufacturer's name will be found by the picker.
 It's recommended to fill this information based on what `ato create component`
 provides.
 </ParamField>
 
-<ParamField path="mpn" type="string">
-  This module's manufacturer part number, as a string.
+<ParamField path='mpn' type='string'>
+
+This module's manufacturer part number, as a string.
 
 For the picker to select the correct part from the manufacturer,
 this must be set.
 </ParamField>
 
-<ParamField path="package" type="string">
-  The package of the module.
+<ParamField path='package' type='string'>
+
+The package of the module.
 
 This drives which components can be selected, and what footprint is used.
 
 Must exactly match a known package name.
 </ParamField>
 
-<ParamField path="exclude_from_bom" type="string">
+<ParamField path='exclude_from_bom' type='string'>
 </ParamField>
 
-<ParamField path="override_net_name" type="string">
-  When set on an interface, this will override the net name of the interface.
+<ParamField path='override_net_name' type='string'>
+
+When set on an interface, this will override the net name of the interface.
 
 This is useful for renaming nets which are automatically generated.
 </ParamField>
 
-<ParamField path="required" type="string">
-  Only for ModuleInterfaces.
+<ParamField path='required' type='string'>
+
+Only for ModuleInterfaces.
 If set to `True`, require that interface is connected to something outside
 of the module it's defined in.
 </ParamField>
