fix vale and traits link

--- a/atopile/essentials/7-traits.mdx
+++ b/atopile/essentials/7-traits.mdx
@@ -1,7 +1,7 @@
 ---
 title: '7. Traits'
 description: 'Traits are a way to extend the functionality of a module.'
-icon: 'copy-plus'
+icon: 'at'
 ---
 
 # Traits
@@ -12,7 +12,7 @@ Currently the following traits are supported:
 
 ## can_bridge_by_name
 
-This trait enables using the [sperm operator `~>`](./1-the-ato-language.mdx) to make a "bridging" connection over a module.
+This trait enables using the [sperm operator `~>`](/atopile/essentials/1-the-ato-language) to make a "bridging" connection over a module.
 
 For example:
 
