remove duplicate text

--- a/atopile/essentials/3-create-component.mdx
+++ b/atopile/essentials/3-create-component.mdx
@@ -4,12 +4,10 @@ description: 'This embedded tool helps template `ato` code based on a component.
 icon: 'plus'
 ---
 
-This embedded tool helps template `ato` code based on a component. Today, it supports JLCPCB components.
-
 It can run as both an interactive tool or with command-line arguments. Go ahead and run it interactively.
 
 ```bash
-ato create component
+ato create part
 ```
 
 You'll be prompted for a search term for a component. This may be:
