--- a/atopile/essentials/4-packages.mdx
+++ b/atopile/essentials/4-packages.mdx
@@ -1,6 +1,6 @@
 ---
 title: '4. Packages'
-description: "One of the key benefits of designing circuit boards with code is that it unlocks modularity. As in software, this modularity means you can package up and reuse modules others have developed and tested."
+#description: "One of the key benefits of designing circuit boards with code is that it unlocks modularity. As in software, this modularity means you can package up and reuse modules others have developed and tested."
 icon: 'cubes'
 ---
 
