--- a/atopile/essentials/5-layout.mdx
+++ b/atopile/essentials/5-layout.mdx
@@ -1,6 +1,6 @@
 ---
 title: '5. Layout'
-description: "`ato` code defines the function of the circuit via the connections between elements. Unlike a software compiler, these components all need to end up placed somewhere and copper traces need routing between the elements for the circuit to function."
+#description: "`ato` code defines the function of the circuit via the connections between elements. Unlike a software compiler, these components all need to end up placed somewhere and copper traces need routing between the elements for the circuit to function."
 icon: 'arrows-split-up-and-left'
 ---
 
